Add Navbar, Footer, Animated Favicon

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-favicon": "^1.0.1",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
