--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-dom": "18.2.0",
     "react-favicon": "^1.0.1",
     "react-query": "^3.39.1",
+    "react-tsparticles": "^2.1.3",
     "superjson": "^1.9.1",
+    "tsparticles": "^2.1.3",
+    "tsparticles-engine": "^2.1.3",
     "zod": "^3.17.3"
   },
   "devDependencies": {
