--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-favicon": "^1.0.1",
+    "react-intersection-observer": "^9.3.5",
     "react-query": "^3.39.1",
     "react-tsparticles": "^2.1.3",
     "superjson": "^1.9.1",
